testdata/invalid/go.mod
module github.com/kimtaeyun/testproject-invalid

go 1.22
